--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Weight of Fish"
-author: "Your Name"
-date: "`r Sys.Date()`"  
+author: "EileenDunn"  
+date: "July 30th, 2024"  
 output: 
   html_document:
     number_sections: true
@@ -48,24 +48,44 @@ Whitefish <- select(Whitefish, -Species)
 
 # For each of the three species of fish listed below, determine the best regression model and also the best 2 element regression model. Use the BestSubset Regression helper file.
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+```{r}
+
+if(!require("Bolstad")) {install.packages("Bolstad");require("Bolstad")}
+```
 
 ## Perch
 
+```{r}
+perchmodel=lm(Weight~ .,data=Perch)
+summary.lm(perchmodel)
+```  
+
+
 ### Best Models
+
 
 ### Best Two regressor model
 
 
 ## Pike
 
+
 ### Best Models
 
+
 ### Best Two regressor model
+
 
 ## Roach
 
 ### Best Models
 
+
 ### Best Two regressor model
 
+
 ## Final Summary Statements
+
