--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Weight of Fish"
-author: "EileenDunn"  
-date: "July 30th, 2024"  
+author: "Eileen Dunn"   
+date: "July 30th, 2024"   
 output: 
   html_document:
     number_sections: true
@@ -63,29 +63,107 @@ perchmodel=lm(Weight~ .,data=Perch)
 summary.lm(perchmodel)
 ```  
 
+```{r}
+library(leaps)
+regsubsets.out <-
+    regsubsets(Weight ~ .,
+               data = Perch,
+               nbest = 2,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
 
-### Best Models
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
+```
 
+The best two regressor model is H-W.
 
 ### Best Two regressor model
 
+```{r}
+Perch2model=lm(Weight~Height+Width,data = Perch)
+summary.lm(Perch2model)
+```
+
+The best two regressor model used to determine weight for Perch is using height and weight(H-W)
 
 ## Pike
 
+```{r}
+Pikemodel1=lm(Weight~ .,data=Pike)
+summary.lm(Pikemodel1)
+```
 
-### Best Models
+```{r}
+library(leaps)
+regsubsets.out <-
+    regsubsets(Weight ~ .,
+               data = Pike,
+               nbest = 1,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
 
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
+```
+
+The regressor shows that L1-L-3-W is greater.  
 
 ### Best Two regressor model
+
+```{r}
+Pike2Model=lm(Weight~Length1+Length3,data = Pike)
+summary.lm(Pike2Model)
+```
+
+The best regressor model for predicting weight for Pike is using Length 1 and Length 3.  
 
 
 ## Roach
 
 ### Best Models
 
+```{r}
+Roach1Model=lm(Weight~ ., data=Roach)
+summary.lm(Roach1Model)
+```
+```{r}
+library(leaps)
+regsubsets.out <-
+    regsubsets(Weight ~ .,
+               data = Roach,
+               nbest = 1,       # 1 best model for each number of predictors
+               nvmax = NULL,    # NULL for no limit on number of variables
+               force.in = NULL, force.out = NULL,
+               method = "exhaustive")
+
+summary.out <- summary(regsubsets.out)
+as.data.frame(summary.out$outmat)
+library(car)
+subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2")
+```
+
+The regressor shows that L3-W is greater.
 
 ### Best Two regressor model
 
 
+```{r}
+Roach2Model=lm(Weight~Length3-Width,data = Roach)
+summary.lm(Roach2Model)
+```
+
+The Best regressor model for predicting weight for Roach is using Length 3 and Width.
+
+
 ## Final Summary Statements
+
+The results above for Perch say that the best two regressor model used to predict weight for Perch is using height and weight(H-W). The results also showed that the best regressor model for predicting weight for Pike is using Length 1 and Length 3. The results for Roach showed that the best regressor model for predicting weight for Roach is using Length 3 and Width.
+
 
